# copper

./: .env.example  .gitignore  CLAUDE.md  GIT_SETUP.md  README.md  pyproject.toml  setup.sh
apps/K9/: README.md  pyproject.toml
apps/K9/src/K9/: __main__.py  broker_factory.py  cli.py  config.py  market_calendar.py  tradier_env.py
apps/K9/src/K9/engine/: constructor.py  order.py  runner.py  validator.py
apps/K9/src/K9/output/: run_log.py
apps/K9/src/K9/tradier/: broker.py  selector.py
apps/K9/tests/: test_cli_close.py  test_config.py  test_constructor.py  test_integration.py  test_market_calendar.py  test_run_log.py  test_runner.py  test_selector.py  test_smoke.py  test_spec_files_policy.py  test_tradier_broker.py  test_tradier_env.py  test_validator.py
apps/K9/trade_specs/: iwm_sic_0dte_w5_none_0900_trds.yaml  qqq_sic_0dte_w5_none_0900_trds.yaml  spx_ccs_20d_w5_tp50_0930.yaml  spx_ic_20d_w5_tp34_0900.json  spx_ic_20d_w5_tp34_0900.yaml  spx_ic_20d_w5_tp34_sandbox.json  spx_ic_20d_w5_tp34_sandbox.yaml  spx_pcs_20d_w5_tp50_0930.json  spx_pcs_20d_w5_tp50_0930.yaml  spx_sic_0dte_w5_none_0900_trds.yaml  xsp_pcs_0dte_w2_none_0900_trds.yaml
apps/captains_log/: pyproject.toml
apps/captains_log/src/captains_log/: __init__.py  __main__.py  cli.py  formatters.py  journal.py  models.py
apps/captains_log/tests/: test_cli.py  test_formatters.py  test_journal.py  test_models.py  test_smoke.py
apps/encyclopedia_galactica/: pyproject.toml
apps/encyclopedia_galactica/src/encyclopedia_galactica/: __init__.py  __main__.py  cli.py  reader.py  store.py
apps/encyclopedia_galactica/tests/: test_reader.py  test_report_cli.py  test_smoke.py  test_store.py
apps/holodeck/: pyproject.toml
apps/holodeck/src/holodeck/: __main__.py  broker.py  cli.py  clock.py  config.py  expiration.py  ledger.py  live_loop.py  market_data.py  order_engine.py  pricing.py
apps/holodeck/src/holodeck/scenarios/: spx_0dte.py
apps/holodeck/tests/: test_broker.py  test_chart.py  test_cli_option_chain.py  test_clock.py  test_expiration.py  test_ledger.py  test_live_bars.py  test_live_chain.py  test_market_data.py  test_order_engine.py  test_pricing.py  test_scenarios.py  test_smoke.py
apps/trade_hunter/: README.md  pyproject.toml
apps/trade_hunter/src/trade_hunter/: cli.py  config.py
apps/trade_hunter/src/trade_hunter/loaders/: journal.py  sector_cache.py  seekingalpha.py  tastytrade.py
apps/trade_hunter/src/trade_hunter/output/: run_log.py  workbook.py
apps/trade_hunter/src/trade_hunter/pipeline/: candidates.py  filters.py  normalize.py  runner.py  scoring.py
apps/trade_hunter/src/trade_hunter/tradier/: client.py  enrichment.py  selector.py
apps/trade_hunter/tests/: test_candidates.py  test_cli.py  test_config.py  test_filters.py  test_integration.py  test_journal_loader.py  test_normalize.py  test_run_log.py  test_scoring_core.py  test_scoring_diversity.py  test_scoring_liquidity.py  test_scoring_seekingalpha.py  test_sector_cache.py  test_seekingalpha_loader.py  test_smoke.py  test_tastytrade_loader.py  test_trade_score.py  test_tradier_client.py  test_tradier_enrichment.py  test_tradier_selector.py  test_workbook.py
apps/tradier_sniffer/: .env.example  README.md  pyproject.toml  tradier_sniffer.db
apps/tradier_sniffer/scripts/: after_hours_check.sh  cron_setup.sh  daily_entry.sh  expiry_check.sh  nickel_test.sh
apps/tradier_sniffer/src/tradier_sniffer/: assign.py  cli.py  config.py  db.py  engine.py  models.py  options.py  reconcile.py  tradier_client.py
apps/tradier_sniffer/src/tradier_sniffer/demo/: edge_cases.py  scenario1.py  scenario1_5.py  scenario2.py  scenario3.py  scenario4.py
apps/tradier_sniffer/tests/: test_assign.py  test_client.py  test_client_orders.py  test_db.py  test_discover.py  test_engine.py  test_models.py  test_options.py  test_reconcile.py  test_scenario1_5.py  test_scenario3.py  test_scenario4.py  test_smoke.py
docs/: BACKLOG.md  BIC_MVP_SPEC.md  CL_STORY_BOARD.md  DICK_WEASEL_MJ.md  GLOSSARY.md  HOLODECK_PLAN.md  (+26 more)
(+106 files in other folders)
