[project]
name = "encyclopedia-galactica"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "captains_log",
]

[project.scripts]
enc = "encyclopedia_galactica.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/encyclopedia_galactica"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
captains_log = { workspace = true }
