[project]
name = "holodeck"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "plotext>=5.2",
    "bic",
]

[project.scripts]
holodeck = "holodeck.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holodeck"]

[tool.uv.sources]
bic = { workspace = true }
