[project]
name = "tradier_sniffer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]

[project.scripts]
tradier_sniffer = "tradier_sniffer.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradier_sniffer"]
